--- a/package.json
+++ b/package.json
@@ -12,11 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^5.0.0-0",
-    "http-status-codes": "^2.3.0",
-    "mysql2": "^3.11.3"
+    "express": "^5.0.0-0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
