--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.0.0-0"
+    "@prisma/client": "^5.21.1",
+    "express": "^5.0.0-0",
+    "prisma": "^5.21.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
