--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http-status-codes": "^2.3.0",
     "mysql2": "^3.11.3",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "prisma": "^5.21.1",
     "swagger-autogen": "^2.23.7",
